Fix the shift of the header when main scrollbar was removed

--- a/src/stylesheets/utilities/_helpers.scss
+++ b/src/stylesheets/utilities/_helpers.scss
@@ -81,3 +81,7 @@
     display: flex;
   }
 }
+
+.unshift {
+  padding-left: calc(100vw - 100%);
+}
